--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,83 @@
+body {
+  background: #333333;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
+h1 {
+  font-weight: 700;
+  font-size: 34px;
+  line-height: 1.5;
+}
+
+header {
+  padding: 20px;
+  background-color: white;
+  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+  border-radius: 10px;
+  display: flex;
+  margin-bottom: 30px;
+  margin-top: 20px;
+}
+
+form {
+  padding: 30px;
+  background-color: white;
+  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+  border-radius: 10px;
+  display: flex;
+  margin-bottom: 30px;
+}
+
+footer,
+a {
+  color: #8a77e1;
+  margin-top: 20px;
+}
+
+img {
+  display: block;
+  max-width: 300px;
+  margin: 0 auto;
+}
+
+.container {
+  margin: 40px auto;
+  max-width: 960px;
+}
+
+.instructions {
+  padding: 16px;
+  border: 1px solid #ddd;
+  width: 80%;
+  font-size: 16px;
+  border-radius: 50px;
+  line-height: 20px;
+  color: #8a77e1;
+}
+
+.submit-button {
+  margin-left: 10px;
+  background: #8a77e1;
+  color: white;
+  border: 1px solid #ddd;
+  width: 150px;
+  font-size: 16px;
+  border-radius: 50px;
+  padding: 14px 24px;
+  transition: all 150ms ease-in-out;
+}
+
+.submit-button:hover {
+  background: white;
+  color: #8a77e1;
+}
+
+.fact {
+  font-size: 16px;
+  background: white;
+  padding: 20px;
+  line-height: 1.5;
+  border: 1px solid rgba(39, 33, 66, 0.5);
+  border-radius: 10px;
+  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+}
