--- a/src/style.css
+++ b/src/style.css
@@ -86,6 +86,25 @@ img {
   box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
 }
 
+.hidden {
+  display: none;
+}
+
 .fact strong {
   color: #8a77e1;
+}
+
+.generating {
+  animation: blink-animation 1s steps(5, start) infinite;
+}
+
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
 }
